--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Game100Pro</title>
+    <link rel="stylesheet" href="css/codemirror.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/icecoder.css">
+    <link rel="stylesheet" href="css/show-hint.css">
 </head>
 <body>
     <header class="header">
@@ -12,28 +15,32 @@
     <div class="dashboard">
         <div class="dashboard__left">
             <div class="code_editor">
-                <div class="box">
-                    <div class="code_editor__editor" id="ace_editor"></div>
-                </div>
+                <div class="code_editor__editor" id="code_editor"></div>
             </div>
+            <button class="send_code js-start">Запустить <b style="color:#000">J</b>еню!</button>
         </div>
         <div class="dashboard__right">
             <div class="sidebar">
                 <div class="box">
-
+                    <div class="task_text">
+                        <h2>Помогите программисту <b style="color:#FF5252">J</b>ене добраться до виски</h2>
+                        <p>1. Проведите его к заветной цели</p>
+                        <p>2. Радуйтесь</p>
+                    </div>
                 </div>
             </div>
             <div class="game_app">
-                <div class="box">
-                    <div id="game_container"></div>
-                </div>
+                <div class="game_container" id="game_container"></div>
             </div>
         </div>
     </div>
 
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/pixi.js"></script>
-    <script src="js/ace.js"></script>
+    <script src="js/codemirror.js"></script>
+    <script src="js/clike.js"></script>
+    <script src="js/show-hint.js"></script>
+    <script src="js/matchbrackets.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
