--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Game100Pro</title>
     <link rel="stylesheet" href="css/codemirror.css">
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/icecoder.css">
+    <link rel="stylesheet" href="css/popup.css">
     <link rel="stylesheet" href="css/show-hint.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header class="header">
@@ -41,6 +42,7 @@
     <script src="js/clike.js"></script>
     <script src="js/show-hint.js"></script>
     <script src="js/matchbrackets.js"></script>
+    <script src="js/jquery.popup.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
