Add restart level

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
             <div class="code_editor">
                 <div class="code_editor__editor" id="code_editor"></div>
             </div>
-            <button class="send_code js-start">Запустить <b style="color:#000">J</b>еню!</button>
+            <button class="send_code button js-start">Запустить <b style="color:#000">J</b>еню!</button>
         </div>
         <div class="dashboard__right">
             <div class="sidebar">
