fix new lesson login

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,24 @@
                         <h2>Помогите программисту <b style="color:#FF5252">J</b>ене добраться до виски</h2>
                         <p>1. Проведите его к заветной цели</p>
                         <p>2. Радуйтесь</p>
+                        <h3>API hero:</h3>
+                        <table>
+                            <tr>
+                                <td>
+                                    void Hero.moveUp();<br>
+                                    void Hero.moveDown();<br>
+                                    void Hero.moveRight();<br>
+                                    void Hero.moveLeft();<br>
+                                </td>
+                                <td>
+                                    Enum Type = empty, wall, finish<br>
+                                    Type Hero.Type.checkUp();<br>
+                                    Type Hero.Type.checkDown();<br>
+                                    Type Hero.Type.checkRight();<br>
+                                    Type Hero.Type.checkLeft();<br>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
