--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,30 +22,32 @@
         </div>
         <div class="dashboard__right">
             <div class="sidebar">
-                <div class="box">
-                    <div class="task_text">
-                        <h2>Помогите программисту <b style="color:#FF5252">J</b>ене добраться до виски</h2>
-                        <p>1. Проведите его к заветной цели</p>
-                        <p>2. Радуйтесь</p>
-                        <h3>API hero:</h3>
-                        <table>
-                            <tr>
-                                <td>
-                                    void Hero.moveUp();<br>
-                                    void Hero.moveDown();<br>
-                                    void Hero.moveRight();<br>
-                                    void Hero.moveLeft();<br>
-                                </td>
-                                <td>
-                                    Enum Type = empty, wall, finish<br>
-                                    Type Hero.Type.checkUp();<br>
-                                    Type Hero.Type.checkDown();<br>
-                                    Type Hero.Type.checkRight();<br>
-                                    Type Hero.Type.checkLeft();<br>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
+                <div class="task_text">
+                    <h2>Помогите программисту <b style="color:#FF5252">J</b>ене добраться до виски</h2>
+                    <p>1. Проведите его к заветной цели</p>
+                    <p>2. Радуйтесь</p>
+                    <h3>SUPER HERO API</h3>
+                    <table>
+                        <tr>
+                            <td>void Hero.moveUp();</td>
+                            <td>void Hero.moveDown();</td>
+                        </tr>
+                        <tr>
+                            <td>void Hero.moveRight();</td>
+                            <td>void Hero.moveLeft();</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">Enum Type = empty, wall, finish</td>
+                        </tr>
+                        <tr>
+                            <td>Type Hero.Type.checkUp();</td>
+                            <td>Type Hero.Type.checkDown();</td>
+                        </tr>
+                        <tr>
+                            <td>Type Hero.Type.checkRight();</td>
+                            <td>Type Hero.Type.checkLeft();</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="game_app">
