--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,23 +29,19 @@
                     <h3>SUPER HERO API</h3>
                     <table>
                         <tr>
-                            <td>void Hero.moveUp();</td>
-                            <td>void Hero.moveDown();</td>
-                        </tr>
-                        <tr>
-                            <td>void Hero.moveRight();</td>
-                            <td>void Hero.moveLeft();</td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">Enum Type = empty, wall, finish</td>
-                        </tr>
-                        <tr>
-                            <td>Type Hero.Type.checkUp();</td>
-                            <td>Type Hero.Type.checkDown();</td>
-                        </tr>
-                        <tr>
-                            <td>Type Hero.Type.checkRight();</td>
-                            <td>Type Hero.Type.checkLeft();</td>
+                            <td>
+                                void Hero.moveUp();<br>
+                                void Hero.moveDown();<br>
+                                void Hero.moveRight();<br>
+                                void Hero.moveLeft();<br>
+                            </td>
+                            <td>
+                                Enum Type = empty, wall, finish<br>
+                                Type Hero.Type.checkUp();<br>
+                                Type Hero.Type.checkDown();<br>
+                                Type Hero.Type.checkRight();<br>
+                                Type Hero.Type.checkLeft();<br>
+                            </td>
                         </tr>
                     </table>
                 </div>
