--- a/gateway-service/src/main/webapp/index.html
+++ b/gateway-service/src/main/webapp/index.html
@@ -30,17 +30,17 @@
                     <table>
                         <tr>
                             <td>
-                                void Hero.moveUp();<br>
-                                void Hero.moveDown();<br>
-                                void Hero.moveRight();<br>
-                                void Hero.moveLeft();<br>
+                                void man.moveUp();<br>
+                                void man.moveDown();<br>
+                                void man.moveRight();<br>
+                                void man.moveLeft();<br>
                             </td>
                             <td>
                                 Enum Type = empty, wall, finish<br>
-                                Type Hero.Type.checkUp();<br>
-                                Type Hero.Type.checkDown();<br>
-                                Type Hero.Type.checkRight();<br>
-                                Type Hero.Type.checkLeft();<br>
+                                Type man.Type.checkUp();<br>
+                                Type man.Type.checkDown();<br>
+                                Type man.Type.checkRight();<br>
+                                Type man.Type.checkLeft();<br>
                             </td>
                         </tr>
                     </table>
